--- a/src/pages/MyPostsPage/MyPostsPage.css
+++ b/src/pages/MyPostsPage/MyPostsPage.css
@@ -3,6 +3,8 @@
   justify-content: center;
   margin-left: auto;
   margin-right: auto;
+  min-height: 70vh;
+
   flex-wrap: wrap;
   margin-top: 15vh;
   padding-bottom: 7vh;
@@ -12,4 +14,10 @@
 }
 #myPostsPage {
   background-color: #f5f7fa;
+}
+@media (max-width: 600px) {
+  #allMyPosts div {
+    margin-right: auto;
+    margin-left: auto;
+  }
 }
